[project]
name = "orbital-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.3.2",
    "fastapi[standard]>=0.116.1",
    "google-cloud-storage>=3.3.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
